# k8sedge-sre-agent

./: .gitignore  README.md
demo-apps/: demo-apps-namespace.yaml  imagepull.yaml  livenessprobe-crashloop.yaml  oom.yaml  pending.yaml  wrong-cmd-crashloop.yaml
health-ui/: docker-compose.yml  fix-sre-rbac.yaml  package-lock.json
health-ui/backend/: Dockerfile  README.md  pyproject.toml
health-ui/backend/app/: main.py  models.py  multi_agent_test.py  workflow_test.py
health-ui/backend/app/agents/: agent_factory.py
health-ui/backend/app/api/: metrics.py  workflow_api.py
health-ui/backend/app/skills/: k8s_diag.py  mock_k8s_diag.py
health-ui/backend/scripts/: agent_sub_test.py  k8s_skills_test.py  multi_agent_test.py  push_tsgs.py  workflow_test.py
health-ui/backend/skills/: mock_k8s_diag.py
health-ui/backend/tsgs/: README.md  TSG-POD-CONTAINERCREATING-DIAG.md  TSG-POD-CONTAINERCREATING-SOL.md  TSG-POD-CRASHLOOP-DIAG.md  TSG-POD-CRASHLOOP-SOL.md  TSG-POD-DNS-DIAG.md  TSG-POD-DNS-SOL.md  TSG-POD-EVICTED-DIAG.md  TSG-POD-EVICTED-SOL.md  TSG-POD-IMAGEPULL-DIAG.md  TSG-POD-IMAGEPULL-SOL.md  TSG-POD-INITFAIL-DIAG.md  TSG-POD-INITFAIL-SOL.md  TSG-POD-LIVENESS-DIAG.md  TSG-POD-LIVENESS-SOL.md  TSG-POD-MOUNT-DIAG.md  TSG-POD-MOUNT-SOL.md  TSG-POD-NETPOL-DIAG.md  TSG-POD-NETPOL-SOL.md  TSG-POD-OOM-DIAG.md  TSG-POD-OOM-SOL.md  TSG-POD-PENDING-DIAG.md  TSG-POD-PENDING-SOL.md  TSG-POD-READINESS-DIAG.md  TSG-POD-READINESS-SOL.md  TSG-POD-SECURITY-DIAG.md  TSG-POD-SECURITY-SOL.md  TSG-POD-TERMINATING-DIAG.md  TSG-POD-TERMINATING-SOL.md
scripts/: setup.sh  teardown.sh
(+20 files in other folders)
