[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework==1.0.0b260107",
    "agent-framework-azure-ai==1.0.0b260107",
    "aiohttp>=3.13.3",
    "azure-ai-projects>=2.0.0b2",
    "azure-identity>=1.25.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "kubernetes>=28.1.0",
    "azure-storage-blob>=12.28.0",
    "python-frontmatter>=1.1.0",
]
